--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav>
         <a href="./index.html"> WebStudio </a>
         <ul>
-          <li><a href="">Студия</a></li>
+          <li><a href="#studio">Студия</a></li>
           <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
@@ -24,7 +24,7 @@
       </ul>
     </header>
 
-    <main>
+    <main id="studio">
       <!--Заказ услуг-->
       <section>
         <h1>
@@ -36,7 +36,7 @@
       <!--Мы предоставляем.-->
       <section>
         <!--Скрытый заголовок h2-->
-        <h2>Особенности</h2>
+        <h2 hidden>Особенности</h2>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
