Не большие исправления
В подключении css, комментарии

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Шапка сайта. С логотипом и навигация-->
@@ -26,7 +26,7 @@
     </header>
 
     <main id="studio">
-      <!--Заказ услуг-->
+      <!--Герой-->
       <section>
         <h1>
           Эффективные решения <br />
@@ -34,9 +34,8 @@
         </h1>
         <button type="button">Заказать услугу</button>
       </section>
-      <!--Мы предоставляем.-->
+      <!--Мы уделяем внимание.-->
       <section>
-        <!--Скрытый заголовок h2-->
         <h2 hidden>Особенности</h2>
         <ul>
           <li>
