--- a/portfolio.html
+++ b/portfolio.html
@@ -22,98 +22,101 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-    <section>
-      <h2 hidden>Портфолио</h2>
-      <ul>
-        <li><a href="">Все</a></li>
-        <li><a href="">Веб-сайты</a></li>
-        <li><a href="">Приложения</a></li>
-        <li><a href="">Дизайн</a></li>
-        <li><a href="">Маркетинг</a></li>
-      </ul>
-      <ul>
-        <li>
-          <img src="./images/portfolio/Технокряк.jpg" alt="Технокряк" width="370" height="294" />
-          <h3>Технокряк</h3>
-          <p>Веб-сайт</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/ПостерNewOrleanVSGoldenStar.jpg"
-            alt="Постер New Orlean vs Golden Star"
-            width="370"
-            height="294"
-          />
-          <h3>Постер New Orlean vs Golden Star</h3>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/РесторанSeafood.jpg"
-            alt="Ресторан Seafood"
-            width="370"
-            height="294"
-          />
-          <h3>Ресторан Seafood</h3>
-          <p>Приложение</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/ПроектPrime.jpg"
-            alt="Проект Prime"
-            width="370"
-            height="294"
-          />
-          <h3>Проект Prime</h3>
-          <p>Маркетинг</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/ПроектBoxes.jpg"
-            alt="Проект Boxes"
-            width="370"
-            height="294"
-          />
-          <h3>Проект Boxes</h3>
-          <p>Приложение</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio//InspirationHasNoBorders.jpg"
-            alt="Inspiration has no Borders"
-            width="370"
-            height="294"
-          />
-          <h3>Inspiration has no Borders</h3>
-          <p>Веб-сайт</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/ИзданиеLimitedEdition.jpg"
-            alt="Издание Limited Edition"
-            width="370"
-            height="294"
-          />
-          <h3>Издание Limited Edition</h3>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <img src="./images/portfolio/ПроектLAB.jpg" alt="Проект LAB" width="370" height="294" />
-          <h3>Проект LAB</h3>
-          <p>Маркетинг</p>
-        </li>
-        <li>
-          <img
-            src="./images/portfolio/GrowingBusiness.jpg"
-            alt="Growing Business"
-            width="370"
-            height="294"
-          />
-          <h3>Growing Business</h3>
-          <p>Приложение</p>
-        </li>
-      </ul>
-    </section>
+    <main>
+      <section>
+        <h2 hidden>Портфолио</h2>
+        <ul>
+          <li><a href="">Все</a></li>
+          <li><a href="">Веб-сайты</a></li>
+          <li><a href="">Приложения</a></li>
+          <li><a href="">Дизайн</a></li>
+          <li><a href="">Маркетинг</a></li>
+        </ul>
+        <ul>
+          <li>
+            <img src="./images/portfolio/Технокряк.jpg" alt="Технокряк" width="370" height="294" />
+            <h3>Технокряк</h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/ПостерNewOrleanVSGoldenStar.jpg"
+              alt="Постер New Orlean vs Golden Star"
+              width="370"
+              height="294"
+            />
+            <h3>Постер New Orlean vs Golden Star</h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/РесторанSeafood.jpg"
+              alt="Ресторан Seafood"
+              width="370"
+              height="294"
+            />
+            <h3>Ресторан Seafood</h3>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/ПроектPrime.jpg"
+              alt="Проект Prime"
+              width="370"
+              height="294"
+            />
+            <h3>Проект Prime</h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/ПроектBoxes.jpg"
+              alt="Проект Boxes"
+              width="370"
+              height="294"
+            />
+            <h3>Проект Boxes</h3>
+            <p>Приложение</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio//InspirationHasNoBorders.jpg"
+              alt="Inspiration has no Borders"
+              width="370"
+              height="294"
+            />
+            <h3>Inspiration has no Borders</h3>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/ИзданиеLimitedEdition.jpg"
+              alt="Издание Limited Edition"
+              width="370"
+              height="294"
+            />
+            <h3>Издание Limited Edition</h3>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/ПроектLAB.jpg" alt="Проект LAB" width="370" height="294" />
+            <h3>Проект LAB</h3>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/GrowingBusiness.jpg"
+              alt="Growing Business"
+              width="370"
+              height="294"
+            />
+            <h3>Growing Business</h3>
+            <p>Приложение</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+
     <!--Футер-->
     <footer>
       <a href="./index.html"> WebStudio </a>
