--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -24,7 +25,7 @@
     </header>
     <main>
       <section>
-        <h2 hidden>Портфолио</h2>
+        <h1 hidden>Портфолио</h1>
         <ul>
           <li><a href="">Все</a></li>
           <li><a href="">Веб-сайты</a></li>
