--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <!--Шапка сайта. С логотипом и навигация-->
     <header>
       <nav>
-        <a href="./index.html"> WebStudio </a>
-        <ul>
+        <a href="./index.html" class="logo"
+          ><span class="logo-blue">Web</span> <span class="logo-black">Studio</span>
+        </a>
+        <ul class="navigator">
           <li><a href="#studio">Студия</a></li>
           <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
@@ -111,7 +113,9 @@
     </main>
     <!--Футер-->
     <footer>
-      <a href="./index.html"> WebStudio </a>
+      <a href="./index.html" class="logo">
+        <span class="logo-blue">Web</span><<span class="logo-white">Studio</span>
+      </a>
       <address>
         <ul>
           <li>
