--- a/portfolio.html
+++ b/portfolio.html
@@ -16,8 +16,10 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html"> WebStudio </a>
-        <ul>
+        <a href="./index.html" class="logo">
+          <span class="logo-blue">Web</span><span class="logo-black">Studio</span>
+        </a>
+        <ul class="navigator">
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
@@ -42,7 +44,7 @@
         <ul>
           <li>
             <img src="./images/portfolio/Технокряк.jpg" alt="Технокряк" width="370" height="294" />
-            <h3>Технокряк</h3>
+            <h2>Технокряк</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
@@ -52,7 +54,7 @@
               width="370"
               height="294"
             />
-            <h3>Постер New Orlean vs Golden Star</h3>
+            <h2>Постер New Orlean vs Golden Star</h2>
             <p>Дизайн</p>
           </li>
           <li>
@@ -62,7 +64,7 @@
               width="370"
               height="294"
             />
-            <h3>Ресторан Seafood</h3>
+            <h2>Ресторан Seafood</h2>
             <p>Приложение</p>
           </li>
           <li>
@@ -72,7 +74,7 @@
               width="370"
               height="294"
             />
-            <h3>Проект Prime</h3>
+            <h2>Проект Prime</h2>
             <p>Маркетинг</p>
           </li>
           <li>
@@ -82,7 +84,7 @@
               width="370"
               height="294"
             />
-            <h3>Проект Boxes</h3>
+            <h2>Проект Boxes</h2>
             <p>Приложение</p>
           </li>
           <li>
@@ -92,7 +94,7 @@
               width="370"
               height="294"
             />
-            <h3>Inspiration has no Borders</h3>
+            <h2>Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
@@ -102,12 +104,12 @@
               width="370"
               height="294"
             />
-            <h3>Издание Limited Edition</h3>
+            <h2>Издание Limited Edition</h2>
             <p>Дизайн</p>
           </li>
           <li>
             <img src="./images/portfolio/ПроектLAB.jpg" alt="Проект LAB" width="370" height="294" />
-            <h3>Проект LAB</h3>
+            <h2>Проект LAB</h2>
             <p>Маркетинг</p>
           </li>
           <li>
@@ -117,7 +119,7 @@
               width="370"
               height="294"
             />
-            <h3>Growing Business</h3>
+            <h2>Growing Business</h2>
             <p>Приложение</p>
           </li>
         </ul>
@@ -126,7 +128,9 @@
 
     <!--Футер-->
     <footer>
-      <a href="./index.html"> WebStudio </a>
+      <a href="./index.html" class="logo">
+        <span class="logo-blue">Web</span><span class="logo-white">Studio</span></a
+      >
       <address>
         <ul>
           <li>
