--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
           ><span class="logo-blue">Web</span> <span class="logo-black">Studio</span>
         </a>
         <ul class="navigator">
-          <li><a href="#studio">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="#studio" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
       <!--Контакты-->
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com </a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contact">
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com </a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
