--- a/portfolio.html
+++ b/portfolio.html
@@ -16,32 +16,30 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo">
-          <span class="logo-blue">Web</span><span class="logo-black">Studio</span>
-        </a>
+        <a href="./index.html" class="logo"><span class="logo-blue">Web</span>Studio </a>
         <ul class="navigator">
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="" class="nav-link">Студия</a></li>
+          <li><a href="#portfolio" class="nav-link">Портфолио</a></li>
+          <li><a href="" class="nav-link">Контакты</a></li>
         </ul>
       </nav>
       <!--Контакты-->
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com </a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contact">
+        <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com </a></li>
+        <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
       </ul>
     </header>
-    <main>
-      <section>
+    <main id="portfolio">
+      <section class="portfolio">
         <h1 hidden>Портфолио</h1>
         <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button ">Веб-сайты</button></li>
-          <li><button type="button ">Приложения</button></li>
-          <li><button type="button ">Дизайн</button></li>
-          <li><button type="button ">Маркетинг</button></li>
+          <li><button class="portfolio-button" type="button">Все</button></li>
+          <li><button class="portfolio-button" type="button ">Веб-сайты</button></li>
+          <li><button class="portfolio-button" type="button ">Приложения</button></li>
+          <li><button class="portfolio-button" type="button ">Дизайн</button></li>
+          <li><button class="portfolio-button" type="button ">Маркетинг</button></li>
         </ul>
-        <ul>
+        <ul class="portfolio-project">
           <li>
             <img src="./images/portfolio/Технокряк.jpg" alt="Технокряк" width="370" height="294" />
             <h2>Технокряк</h2>
