--- a/index.html
+++ b/index.html
@@ -17,60 +17,62 @@
     <!--Шапка сайта. С логотипом и навигация-->
     <header>
       <nav>
-        <a href="./index.html" class="logo"
-          ><span class="logo-blue">Web</span> <span class="logo-black">Studio</span>
-        </a>
+        <a href="./index.html" class="logo"><span class="logo-blue">Web</span>Studio </a>
         <ul class="navigator">
-          <li><a href="#studio" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+          <li><a href="#studio" class="nav-link">Студия</a></li>
+          <li><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
+          <li><a href="" class="nav-link">Контакты</a></li>
         </ul>
       </nav>
       <!--Контакты-->
       <ul class="contact">
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com </a></li>
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com </a></li>
+        <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
     <main id="studio">
       <!--Герой-->
-      <section>
+      <section class="hero">
         <h1>
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <button type="button">Заказать услугу</button>
+        <button class="hero-button" type="button">Заказать услугу</button>
       </section>
       <!--Мы уделяем внимание.-->
-      <section>
+      <section class="project">
         <h2 hidden>Особенности</h2>
         <ul>
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <h3 class="project-title">Внимание к деталям</h3>
+            <p class="project-text">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="project-title">Пунктуальность</h3>
+            <p class="project-text">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="project-title">Планирование</h3>
+            <p class="project-text">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="project-title">Современные технологии</h3>
+            <p class="project-text">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
       <!--Услуги-->
-      <section>
-        <h2>Чем мы занимаемся</h2>
+      <section class="project-cards">
+        <h2 class="project-cards-title">Чем мы занимаемся</h2>
         <ul>
           <li>
             <img src="./images/box1.jpg" alt="Создание структуры" width="370" />
@@ -85,7 +87,7 @@
       </section>
 
       <!--Команда-->
-      <section>
+      <section class="command">
         <h2>Наша команда</h2>
         <ul>
           <li>
@@ -114,21 +116,22 @@
     <!--Футер-->
     <footer>
       <a href="./index.html" class="logo">
-        <span class="logo-blue">Web</span><<span class="logo-white">Studio</span>
+        <span class="logo-blue">Web</span><span class="logo-white">Studio</span>
       </a>
-      <address>
+      <address class="address">
         <ul>
           <li>
             <a
               href="https://goo.gl/maps/zXmNazpMUdunzP9r6"
               target="_blank"
               rel="noreferrer noopener"
+              class="address-map"
             >
               г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li><a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="address-link">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
