--- a/portfolio.html
+++ b/portfolio.html
@@ -129,19 +129,20 @@
       <a href="./index.html" class="logo">
         <span class="logo-blue">Web</span><span class="logo-white">Studio</span></a
       >
-      <address>
+      <address class="address">
         <ul>
           <li>
             <a
               href="https://goo.gl/maps/zXmNazpMUdunzP9r6"
               target="_blank"
               rel="noreferrer noopener"
+              class="address-map"
             >
               г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li><a href="mailto:info@devstudio.com" class="address-link">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="address-link">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
