--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
       <nav>
         <a href="./index.html" class="logo"><span class="logo-blue">Web</span>Studio </a>
         <ul class="navigator">
-          <li><a href="" class="nav-link">Студия</a></li>
+          <li><a href="./index.html" class="nav-link">Студия</a></li>
           <li><a href="#portfolio" class="nav-link">Портфолио</a></li>
           <li><a href="" class="nav-link">Контакты</a></li>
         </ul>
