--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <nav>
         <a href="./index.html" class="logo"><span class="logo-blue">Web</span>Studio </a>
         <ul class="navigator">
-          <li><a href="#studio" class="nav-link">Студия</a></li>
-          <li><a href="./portfolio.html" class="nav-link">Портфолио</a></li>
-          <li><a href="" class="nav-link">Контакты</a></li>
+          <li><a href="#studio" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
       <!--Контакты-->
@@ -34,13 +34,10 @@
     <main id="studio">
       <!--Герой-->
       <section class="hero">
-        <h1>
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
-      <!--Мы уделяем внимание.-->
+      <!--Проекты.-->
       <section class="project">
         <h2 hidden>Особенности</h2>
         <ul>
@@ -70,8 +67,8 @@
           </li>
         </ul>
       </section>
-      <!--Услуги-->
-      <section class="project-cards">
+      <!--Карточки проектов-->
+      <section>
         <h2 class="project-cards-title">Чем мы занимаемся</h2>
         <ul>
           <li>
@@ -88,36 +85,34 @@
 
       <!--Команда-->
       <section class="command">
-        <h2>Наша команда</h2>
+        <h2 class="command-title">Наша команда</h2>
         <ul>
           <li>
             <img src="./images/ИгорьДемьяненко.jpg" alt="Игорь Демьяненко" width="270" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="command-heading">Игорь Демьяненко</h3>
+            <p class="command-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/ОльгаРепина.jpg" alt="Ольга Репина" width="270" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="command-heading">Ольга Репина</h3>
+            <p class="command-text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/НиколайТарасов.jpg" alt="Николай Тарасов" width="270" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="command-heading">Николай Тарасов</h3>
+            <p class="command-text">Marketing</p>
           </li>
           <li>
             <img src="./images/МихаилЕрмаков.jpg" alt="Михаил Ермаков" width="270" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="command-heading">Михаил Ермаков</h3>
+            <p class="command-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Футер-->
     <footer>
-      <a href="./index.html" class="logo">
-        <span class="logo-blue">Web</span><span class="logo-white">Studio</span>
-      </a>
+      <a href="./index.html" class="logo-footer"> <span class="logo-blue">Web</span>Studio </a>
       <address class="address">
         <ul>
           <li>
