--- a/portfolio.html
+++ b/portfolio.html
@@ -18,9 +18,9 @@
       <nav>
         <a href="./index.html" class="logo"><span class="logo-blue">Web</span>Studio </a>
         <ul class="navigator">
-          <li><a href="./index.html" class="nav-link">Студия</a></li>
-          <li><a href="#portfolio" class="nav-link">Портфолио</a></li>
-          <li><a href="" class="nav-link">Контакты</a></li>
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="#portfolio" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
       <!--Контакты-->
@@ -42,8 +42,8 @@
         <ul class="portfolio-project">
           <li>
             <img src="./images/portfolio/Технокряк.jpg" alt="Технокряк" width="370" height="294" />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <h2 class="portfolio-project-title">Технокряк</h2>
+            <p class="portfolio-project-text">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -52,8 +52,8 @@
               width="370"
               height="294"
             />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <h2 class="portfolio-project-title">Постер New Orlean vs Golden Star</h2>
+            <p class="portfolio-project-text">Дизайн</p>
           </li>
           <li>
             <img
@@ -62,8 +62,8 @@
               width="370"
               height="294"
             />
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
+            <h2 class="portfolio-project-title">Ресторан Seafood</h2>
+            <p class="portfolio-project-text">Приложение</p>
           </li>
           <li>
             <img
@@ -72,8 +72,8 @@
               width="370"
               height="294"
             />
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
+            <h2 class="portfolio-project-title">Проект Prime</h2>
+            <p class="portfolio-project-text">Маркетинг</p>
           </li>
           <li>
             <img
@@ -82,8 +82,8 @@
               width="370"
               height="294"
             />
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p>
+            <h2 class="portfolio-project-title">Проект Boxes</h2>
+            <p class="portfolio-project-text">Приложение</p>
           </li>
           <li>
             <img
@@ -92,8 +92,8 @@
               width="370"
               height="294"
             />
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <h2 class="portfolio-project-title">Inspiration has no Borders</h2>
+            <p class="portfolio-project-text">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -102,13 +102,13 @@
               width="370"
               height="294"
             />
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
+            <h2 class="portfolio-project-title">Издание Limited Edition</h2>
+            <p class="portfolio-project-text">Дизайн</p>
           </li>
           <li>
             <img src="./images/portfolio/ПроектLAB.jpg" alt="Проект LAB" width="370" height="294" />
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p>
+            <h2 class="portfolio-project-title">Проект LAB</h2>
+            <p class="portfolio-project-text">Маркетинг</p>
           </li>
           <li>
             <img
@@ -117,8 +117,8 @@
               width="370"
               height="294"
             />
-            <h2>Growing Business</h2>
-            <p>Приложение</p>
+            <h2 class="portfolio-project-title">Growing Business</h2>
+            <p class="portfolio-project-text">Приложение</p>
           </li>
         </ul>
       </section>
@@ -126,9 +126,7 @@
 
     <!--Футер-->
     <footer>
-      <a href="./index.html" class="logo">
-        <span class="logo-blue">Web</span><span class="logo-white">Studio</span></a
-      >
+      <a href="./index.html" class="logo-footer"><span class="logo-blue">Web</span>Studio</a>
       <address class="address">
         <ul>
           <li>
