--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
       <!--Контакты-->
-      <ul class="contact">
+      <ul>
         <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com </a></li>
         <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
       </ul>
@@ -33,7 +33,7 @@
 
     <main id="studio">
       <!--Герой-->
-      <section class="hero">
+      <section>
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button class="hero-button" type="button">Заказать услугу</button>
       </section>
@@ -113,7 +113,7 @@
     <!--Футер-->
     <footer>
       <a href="./index.html" class="logo-footer"> <span class="logo-blue">Web</span>Studio </a>
-      <address class="address">
+      <address>
         <ul>
           <li>
             <a
