--- a/portfolio.html
+++ b/portfolio.html
@@ -24,13 +24,13 @@
         </ul>
       </nav>
       <!--Контакты-->
-      <ul class="contact">
+      <ul>
         <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com </a></li>
         <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main id="portfolio">
-      <section class="portfolio">
+      <section>
         <h1 hidden>Портфолио</h1>
         <ul>
           <li><button class="portfolio-button" type="button">Все</button></li>
@@ -127,7 +127,7 @@
     <!--Футер-->
     <footer>
       <a href="./index.html" class="logo-footer"><span class="logo-blue">Web</span>Studio</a>
-      <address class="address">
+      <address>
         <ul>
           <li>
             <a
