Исправления после валидации

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,11 +33,11 @@
       <section>
         <h1 hidden>Портфолио</h1>
         <ul>
-          <li><button class="portfolio-button" type="button">Все</button></li>
-          <li><button class="portfolio-button" type="button ">Веб-сайты</button></li>
-          <li><button class="portfolio-button" type="button ">Приложения</button></li>
-          <li><button class="portfolio-button" type="button ">Дизайн</button></li>
-          <li><button class="portfolio-button" type="button ">Маркетинг</button></li>
+          <li><button type="button" class="portfolio-button">Все</button></li>
+          <li><button type="button" class="portfolio-button">Веб-сайты</button></li>
+          <li><button type="button" class="portfolio-button">Приложения</button></li>
+          <li><button type="button" class="portfolio-button">Дизайн</button></li>
+          <li><button type="button" class="portfolio-button">Маркетинг</button></li>
         </ul>
         <ul class="portfolio-project">
           <li>
