--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <!--Герой-->
       <section>
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-button" type="button">Заказать услугу</button>
+        <button type="button" class="hero-button">Заказать услугу</button>
       </section>
       <!--Проекты.-->
       <section class="project">
