--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
     <main id="studio">
       <!--Герой-->
-      <section>
+      <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="hero-button">Заказать услугу</button>
+        <button type="button" class="hero-button key">Заказать услугу</button>
       </section>
       <!--Проекты.-->
       <section class="project">
@@ -68,7 +68,7 @@
         </ul>
       </section>
       <!--Карточки проектов-->
-      <section>
+      <section class="project-cards">
         <h2 class="project-cards-title">Чем мы занимаемся</h2>
         <ul>
           <li>
@@ -111,7 +111,7 @@
       </section>
     </main>
     <!--Футер-->
-    <footer>
+    <footer class="footer">
       <a href="./index.html" class="logo-footer"> <span class="logo-blue">Web</span>Studio </a>
       <address>
         <ul>
