--- a/portfolio.html
+++ b/portfolio.html
@@ -125,7 +125,7 @@
     </main>
 
     <!--Футер-->
-    <footer>
+    <footer class="footer">
       <a href="./index.html" class="logo-footer"><span class="logo-blue">Web</span>Studio</a>
       <address>
         <ul>
