--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <header>
       <nav>
         <a href="./index.html" class="logo"><span class="logo-blue">Web</span>Studio </a>
-        <ul class="navigator">
+        <ul class="navigator-list">
           <li><a href="#studio" class="link">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
       <!--Контакты-->
-      <ul>
+      <ul class="contact-list">
         <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com </a></li>
         <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
       </ul>
@@ -38,9 +38,9 @@
         <button type="button" class="hero-button key">Заказать услугу</button>
       </section>
       <!--Проекты.-->
-      <section class="project">
+      <section>
         <h2 hidden>Особенности</h2>
-        <ul>
+        <ul class="project-list">
           <li>
             <h3 class="project-title">Внимание к деталям</h3>
             <p class="project-text">
@@ -68,9 +68,9 @@
         </ul>
       </section>
       <!--Карточки проектов-->
-      <section class="project-cards">
+      <section>
         <h2 class="project-cards-title">Чем мы занимаемся</h2>
-        <ul>
+        <ul class="project-cards-list">
           <li>
             <img src="./images/box1.jpg" alt="Создание структуры" width="370" />
           </li>
@@ -86,7 +86,7 @@
       <!--Команда-->
       <section class="command">
         <h2 class="command-title">Наша команда</h2>
-        <ul>
+        <ul class="command-list">
           <li>
             <img src="./images/ИгорьДемьяненко.jpg" alt="Игорь Демьяненко" width="270" />
             <h3 class="command-heading">Игорь Демьяненко</h3>
@@ -114,7 +114,7 @@
     <footer class="footer">
       <a href="./index.html" class="logo-footer"> <span class="logo-blue">Web</span>Studio </a>
       <address>
-        <ul>
+        <ul class="footer-list">
           <li>
             <a
               href="https://goo.gl/maps/zXmNazpMUdunzP9r6"
