--- a/portfolio.html
+++ b/portfolio.html
@@ -17,14 +17,14 @@
     <header>
       <nav>
         <a href="./index.html" class="logo"><span class="logo-blue">Web</span>Studio </a>
-        <ul class="navigator">
+        <ul class="navigator-list">
           <li><a href="./index.html#studio" class="link">Студия</a></li>
           <li><a href="#portfolio" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
       <!--Контакты-->
-      <ul>
+      <ul class="contact-list">
         <li><a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com </a></li>
         <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
       </ul>
@@ -32,14 +32,14 @@
     <main id="portfolio">
       <section>
         <h1 hidden>Портфолио</h1>
-        <ul>
-          <li><button type="button" class="portfolio-button">Все</button></li>
+        <ul class="portfolio-button-list">
+          <li><button type="button" class="portfolio-button-one">Все</button></li>
           <li><button type="button" class="portfolio-button">Веб-сайты</button></li>
           <li><button type="button" class="portfolio-button">Приложения</button></li>
           <li><button type="button" class="portfolio-button">Дизайн</button></li>
           <li><button type="button" class="portfolio-button">Маркетинг</button></li>
         </ul>
-        <ul>
+        <ul class="portfolio-project-list">
           <li>
             <img src="./images/portfolio/Технокряк.jpg" alt="Технокряк" width="370" height="294" />
             <h2 class="portfolio-project-title">Технокряк</h2>
