--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav>
         <a href="./index.html" class="logo"><span class="logo-blue">Web</span>Studio </a>
         <ul class="navigator-list">
-          <li><a href="#studio" class="link">Студия</a></li>
+          <li><a href="#studio" class="link studio">Студия</a></li>
           <li><a href="./portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
@@ -34,8 +34,11 @@
     <main id="studio">
       <!--Герой-->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="hero-button key">Заказать услугу</button>
+        <h1 class="hero-title">
+          Эффективные решения <br />
+          для вашего бизнеса
+        </h1>
+        <button type="button" class="hero-button">Заказать услугу</button>
       </section>
       <!--Проекты.-->
       <section>
