--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <a href="./index.html" class="logo"><span class="logo-blue">Web</span>Studio </a>
         <ul class="navigator-list">
           <li><a href="./index.html#studio" class="link">Студия</a></li>
-          <li><a href="#portfolio" class="link">Портфолио</a></li>
+          <li><a href="#portfolio" class="link portfolio">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
