--- a/portfolio.html
+++ b/portfolio.html
@@ -29,16 +29,19 @@
         <li><a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a></li>
       </ul>
     </header>
+    <!--Портфолио-->
     <main id="portfolio">
+      <!--Кнопки в портфолио-->
       <section>
         <h1 hidden>Портфолио</h1>
         <ul class="portfolio-button-list">
-          <li><button type="button" class="portfolio-button-one">Все</button></li>
+          <li><button type="button" class="portfolio-button one">Все</button></li>
           <li><button type="button" class="portfolio-button">Веб-сайты</button></li>
           <li><button type="button" class="portfolio-button">Приложения</button></li>
           <li><button type="button" class="portfolio-button">Дизайн</button></li>
           <li><button type="button" class="portfolio-button">Маркетинг</button></li>
         </ul>
+        <!--Проекты портфолио-->
         <ul class="portfolio-project-list">
           <li>
             <img src="./images/portfolio/Технокряк.jpg" alt="Технокряк" width="370" height="294" />
@@ -128,7 +131,7 @@
     <footer class="footer">
       <a href="./index.html" class="logo-footer"><span class="logo-blue">Web</span>Studio</a>
       <address>
-        <ul>
+        <ul class="footer-list">
           <li>
             <a
               href="https://goo.gl/maps/zXmNazpMUdunzP9r6"
